--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
 		"test": "jest"
 	},
 	"dependencies": {
+		"base-64": "^0.1.0",
+		"buffer": "^5.0.8",
 		"react": "16.0.0",
 		"react-native": "0.50.3"
 	},
